--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "jmikola/geojson": "^1.0",
+        "mjaschen/phpgeo": "^3.2",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
