--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "doctrine/annotations": "^1.10",
         "jmikola/geojson": "^1.0",
         "mjaschen/phpgeo": "^3.2",
         "symfony/console": "5.1.*",
