--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-json": "*",
         "doctrine/annotations": "^1.10",
         "jmikola/geojson": "^1.0",
+        "jms/serializer-bundle": "^3.7",
         "mjaschen/phpgeo": "^3.2",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
