--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "jmikola/geojson": "^1.0",
         "jms/serializer-bundle": "^3.7",
         "mjaschen/phpgeo": "^3.2",
+        "nesbot/carbon": "^2.46",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
