--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
+        "guzzlehttp/guzzle": "^7.3",
         "jmikola/geojson": "^1.0",
         "jms/serializer-bundle": "^3.9",
         "mjaschen/phpgeo": "^3.2",
