--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,8 +1,14 @@
 doctrine:
     dbal:
-        override_url: true
-        url: '%env(resolve:DATABASE_URL)%'
-
+        connections:
+            app:
+                driver: 'pdo_mysql'
+                dbname: corona
+                port: 8002
+                user: corona
+                password: ccorona
+                host: 127.0.0.1
+                server_version: 5.7
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
